k8s/base/applications/dev-pocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbase
  namespace: apps-utility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketbase
  template:
    metadata:
      labels:
        app: pocketbase
    spec:
      containers:
        - name: pocketbase
          image: ghcr.io/muchobien/pocketbase:0.22.27
          args:
            - /pb/pocketbase
            - serve
            - --http=0.0.0.0:8090
            - --dir=/pb_data
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /
              port: 8090
          livenessProbe:
            tcpSocket:
              port: 8090
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /pb_data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pocketbase-data
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
  namespace: apps-utility
spec:
  selector:
    app: pocketbase
  ports:
    - name: http
      port: 80
      targetPort: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketbase
  namespace: apps-utility
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: traefik-force-https@kubernetescrd,traefik-default-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pocket.domain.tld
      secretName: pocketbase-tls
  rules:
    - host: pocket.domain.tld
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocketbase
                port:
                  number: 80
