k8s/base/applications/srv-ntfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: apps-utility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: ntfy
                topologyKey: kubernetes.io/hostname
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.11.0
          args:
            - serve
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 80
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 80
          volumeMounts:
            - name: data
              mountPath: /var/cache/ntfy
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ntfy-data
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: apps-utility
spec:
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: apps-utility
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: traefik-force-https@kubernetescrd,traefik-default-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ntfy.domain.tld
      secretName: ntfy-tls
  rules:
    - host: ntfy.domain.tld
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
